--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -59,6 +59,7 @@ header {
 	margin: 50px 0
 }
 
+
 header nav ul {
     display: flex;
     align-items: center; /* Aligne verticalement les éléments */
@@ -176,10 +177,16 @@ li:hover {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+    max-width: 1000px;
+    margin: 0 auto;
+    
+    
 }
 
 .gallery img {
 	width: 100%;
+        aspect-ratio: 305/407;
+    object-fit: cover;
 }
 
 .gallery figcaption {
@@ -200,6 +207,11 @@ margin: auto;
 #contact h2{
 	margin-bottom: 20px;
 }
+
+#contact p {
+    font-size: 16px;
+} 
+
 #contact form {
 	text-align: left;
 	margin-top:30px;
@@ -428,6 +440,8 @@ footer nav ul {
     max-width: 630px;
     width: 90%;
     z-index: 1001;
+    padding: 60px 50px;
+    max-width: 500px;
 }
 
 /* Bouton fermer (croix) */
@@ -454,13 +468,15 @@ footer nav ul {
 .modal-gallery {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
+    gap: 30px 10px;
     margin-bottom: 47px;
+    padding: 0 43px;
 }
 
 .modal-gallery figure {
     position: relative;
     margin: 0;
+    aspect-ratio: 3/4;
 }
 
 .modal-gallery img {
@@ -491,6 +507,8 @@ footer nav ul {
     border: none;
     border-top: 1px solid #B3B3B3;
     margin-bottom: 38px;
+    margin-left: 43px;
+    margin-right: 43px;
 }
 
 /* Bouton "Ajouter une photo" */
@@ -582,6 +600,7 @@ footer nav ul {
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
     padding: 0 15px;
     margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .submit-button {
