--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -436,12 +436,20 @@ footer nav ul {
     transform: translate(-50%, -50%);
     background: white;
     border-radius: 10px;
-    padding: 60px 105px;
-    max-width: 630px;
-    width: 90%;
     z-index: 1001;
-    padding: 60px 50px;
-    max-width: 500px;
+    width: 630px;
+    box-sizing: border-box;
+    min-height: auto;
+
+}
+#gallery-view {
+    padding: 60px 105px 40px;
+}
+
+/* Vue ajout photo - padding différent */
+#add-photo-view {
+    display: none;
+    padding: 60px 105px 60px;
 }
 
 /* Bouton fermer (croix) */
@@ -469,8 +477,7 @@ footer nav ul {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 30px 10px;
-    margin-bottom: 47px;
-    padding: 0 43px;
+    
 }
 
 .modal-gallery figure {
@@ -503,12 +510,17 @@ footer nav ul {
 }
 
 /* Ligne de séparation */
-.modal-content hr {
+#gallery-view hr {
     border: none;
     border-top: 1px solid #B3B3B3;
-    margin-bottom: 38px;
-    margin-left: 43px;
-    margin-right: 43px;
+    margin: 80px 0 30px 0;
+}
+
+/* HR spécifique à la vue ajout photo */
+#add-photo-view hr {
+    border: none;
+    border-top: 1px solid #B3B3B3;
+    margin: 30px 0 30px 0;
 }
 
 /* Bouton "Ajouter une photo" */
@@ -558,12 +570,15 @@ footer nav ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 8px;
+    
 }
 
 .upload-icon {
     font-size: 76px;
     color: #B9C5CC;
-    margin-bottom: 20px;
+    margin: 0;
+    
 }
 
 .upload-label {
@@ -572,7 +587,8 @@ footer nav ul {
     border-radius: 50px;
     padding: 10px 33px;
     cursor: pointer;
-    margin-bottom: 7px;
+    margin: 0;
+    
 }
 
 #photo-input {
@@ -582,6 +598,7 @@ footer nav ul {
 .upload-info {
     font-size: 10px;
     color: #444444;
+    margin: 0;
 }
 
 #photo-preview {
@@ -601,7 +618,7 @@ footer nav ul {
 
 
 /* Formulaire */
-#add-photo-form label {
+#add-photo-form label:not(.upload-label) {
     display: block;
     margin: 21px 0 10px 0;
     font-weight: 500;
@@ -631,7 +648,7 @@ footer nav ul {
     font-weight: 700;
     cursor: not-allowed;
     display: block;
-    margin: 47px auto 0;
+    margin: 0 auto 0;
 }
 
 .submit-button:not(:disabled) {
