--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -636,6 +636,15 @@ footer nav ul {
     box-sizing: border-box;
 }
 
+#add-photo-form select {
+    appearance: none; /* Supprime le chevron par défaut */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='6' viewBox='0 0 10 6'%3E%3Cpath fill='none' stroke='%23B3B3B3' stroke-width='1' d='m1 2 4 4 4-4'/%3E%3C/svg%3E");    background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    background-position: right 20px center; 
+    background-size: 15px 6px; 
+    padding-right: 45px; 
+}
+
 .submit-button {
     width: 237px;
     height: 36px;
